samples/_failures_safe/1761129100_4fb8a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_543bf8cf.c: In function ‘main’:
./samples/SAFE/__tmp_543bf8cf.c:168:5: error: expected declaration or statement at end of input
  168 |     }
      |     ^
